<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.ComposeFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPostImage"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/input_photo"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginBottom="5dp"/>

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            tools:visibility="visible" />
    </RelativeLayout>


    <ImageButton
        android:id="@+id/ibCaptureImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:text="@string/take_photo"
        android:gravity="center"
        android:background="?android:colorBackground"
        android:src="@drawable/ic_outline_add_a_photo_60"
        android:contentDescription="@string/take_photo" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/description"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:gravity="center_horizontal|bottom"
        android:background="@drawable/button_outline" />



</LinearLayout>